--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -199,7 +199,8 @@ button {
 
 .turtorial__desc-highlight {
     background: -webkit-linear-gradient(45deg, #09009f, #00ff95 80%);
-    background-clip: text;
+    -webkit-background-clip: text;
+            background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 600;
     font-size: 3rem;
