--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,6 +51,7 @@ button {
 .header {
     background: #fff;
     box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.5);
+    background: #181460;
 }
 .header__wrapper {
     display: flex;
@@ -73,142 +74,177 @@ button {
 
 .header__link {
     font-size: 1.4rem;
+    color: #fff;
 }
 
 .main {
     background: #fffaf5;
 }
 
-/* Hero */
-.hero {
-    position: relative;
-    height: calc(100vh - 76px);
+/* Fixed */
+.fixed {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
 }
 
-.hero__img {
-    width: 100%;
-    height: 100%;
+.fixed__list {
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.fixed img {
+    width: 30px;
+    height: 30px;
     object-fit: cover;
 }
 
-.hero__inner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.fixed__item + .fixed__item {
+    margin-top: 10px;
 }
 
-.hero__heading {
-    color: #fff;
-    font-family: "Inter", sans-serif;
-    text-align: center;
-    font-weight: 800;
-    font-size: 3.2rem;
-    margin-bottom: 10px;
-}
-
-.hero__form {
+/* Filter */
+.filter__form {
     display: flex;
+    align-items: center;
+    justify-content: center;
     column-gap: 20px;
-    background: #fff;
     padding: 15px 20px;
     width: 1160px;
     border-radius: 8px;
 }
 
-.hero__search {
-    display: flex;
+.filter__input {
+    width: 300px;
+    height: 40px;
+    padding: 0 10px;
     outline: none;
-    border: none;
-    padding: 10px 20px;
 }
 
-.hero__search-text {
+.filter_search-text {
     font-size: 1.2rem;
     margin-left: 5px;
     white-space: nowrap;
 }
 
-.hero__input {
-    outline: none;
-    border: 1px solid #666;
-    padding: 0 10px;
-}
-
-.hero__input:first-child {
+.filter_input:first-child {
     width: 500px;
 }
 
-.hero__select {
-    width: 250px;
+.filter__select {
+    min-width: 150px;
     padding: 0 10px;
+    height: 40px;
+    outline: none;
 }
 
-.hero__input,
-.hero__select {
-    font-size: 12px;
+.filter__search {
+    outline: none;
+    border: none;
 }
 
 /* Tutorial */
 .turtorial {
+    background: #eeeefe;
     margin-top: 30px;
+    padding: 50px 0;
 }
 
 .turtorial__inner {
     display: flex;
-    align-items: center;
-    column-gap: 60px;
+    column-gap: 30px;
 }
 
-.youtube-vd {
+.tutorial__left,
+.turtorial__right {
+    flex: 1;
+}
+
+.turtorial__heading {
+    font-weight: 700;
+    font-size: 2.5rem;
+    line-height: 30px;
+    color: #181460;
+    margin-bottom: 5px;
+}
+
+.turtorial__desc {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #181460;
+    margin-bottom: 30px;
+    margin-top: 16px;
+}
+
+.turtorial-vd {
     position: relative;
-    overflow: hidden;
     width: 100%;
     padding-top: 56.25%;
-    flex: 1;
 }
 
-.turtorial__left {
-    flex: 1;
-}
-
-.responsive-iframe {
+.turtorial-iframe {
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    inset: 0;
     width: 100%;
     height: 100%;
 }
 
-.turtorial__heading {
-    color: #256df8;
-    font-family: "Inter", sans-serif;
-    font-size: 4rem;
-    font-weight: 600;
-    line-height: 1.5;
-    padding-bottom: 25px;
+.turtorial__item {
+    flex: 1;
+    display: flex;
+    column-gap: 10px;
+    height: 100px;
 }
 
-.turtorial__desc {
-    font-size: 3.4rem;
-    line-height: 1.5;
-    font-size: 2.4rem;
+.turtorial__item + .turtorial__item {
+    margin-top: 10px;
 }
 
-.turtorial__desc-highlight {
-    background: -webkit-linear-gradient(45deg, #09009f, #00ff95 80%);
-    -webkit-background-clip: text;
-            background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-weight: 600;
-    font-size: 3rem;
+.turtorial__img {
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+}
+
+.turtorial__overview-desc {
+    font-size: 1.4rem;
+    color: #181460;
+    margin-bottom: 10px;
+    line-height: 1.5;
+}
+
+.turtorial__overview-date,
+.turtorial__overview-view {
+    color: #989898;
+    font-size: 12px;
+}
+
+.turtorial__overview-info {
+    display: flex;
+    column-gap: 10px;
+}
+
+.turtorial__overview-view {
+    display: flex;
+    column-gap: 5px;
+}
+
+.turtorial__more-wrap {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
+    align-items: center;
+    column-gap: 5px;
+    font-size: 12px;
+    color: #989898;
 }
 
 /* Rooms */
 .room {
-    margin-top: 60px;
+    margin-top: 30px;
     padding-bottom: 60px;
 }
 
