--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,7 +114,7 @@ button {
 }
 
 .filter__input {
-    width: 300px;
+    min-width: 300px;
     height: 40px;
     padding: 0 10px;
     outline: none;
@@ -301,7 +301,7 @@ button {
 
 .room__item-desc {
     color: #666;
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
 .row__item-btn {
