--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -63,6 +63,13 @@
         color: #333;
     }
 
+    /* Fixed */
+    .contact-img {
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+    }
+
     /* Filter */
     .filter {
         margin-top: 30px;
