--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -246,7 +246,7 @@ button {
 /* Rooms */
 .room {
     margin-top: 30px;
-    padding-bottom: 60px;
+    padding-bottom: 40px;
 }
 
 .room__heading {
@@ -264,7 +264,7 @@ button {
 
 .room__item {
     background: #fff;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.1);
     padding: 20px;
     border-radius: 12px;
 }
@@ -300,7 +300,24 @@ button {
 
 .room__item-desc {
     color: #666;
-    /* white-space: nowrap; */
+}
+
+.room__sort {
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+    margin-bottom: 20px;
+    flex-wrap: nowrap;
+}
+
+.room__sort-item {
+    padding: 10px;
+    background: #eee;
+}
+
+.room__sort-item-active {
+    font-weight: 600;
+    text-decoration: underline;
 }
 
 .row__item-btn {
@@ -324,6 +341,27 @@ button {
 
 .row__item-btn p:nth-child(2) {
     width: 40%;
+}
+
+.room__control {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    column-gap: 10px;
+}
+
+.room__page-btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    background: #ddd;
+    border: 1px solid #ddd;
+}
+
+.room__page-current {
+    background: #e13427;
+    border: 1px solid #e13427;
+    color: #fff;
 }
 
 /* Footer */
