--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 input,
 textarea,
 select,
@@ -92,6 +97,9 @@ button {
 /* Header */
 .header {
     background: #00468b;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .header__wrapper {
@@ -99,13 +107,6 @@ button {
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
-}
-
-.logo {
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    object-fit: cover;
 }
 
 .navbar {
