--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,11 @@ button {
     opacity: 0;
 }
 
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
+}
+
 /* Pop-up */
 .overlay {
     position: fixed;
