--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,6 +61,12 @@ button {
     overflow: hidden;
 }
 
+.logo {
+    width: 124px;
+    height: 124px;
+    object-fit: cover;
+}
+
 /* Pop-up */
 .overlay {
     position: fixed;
@@ -479,8 +485,8 @@ button {
 
 .footer__row {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 50px;
+    grid-template-columns: auto repeat(3, 1fr);
+    column-gap: 40px;
     padding-bottom: 50px;
     border-bottom: 1px solid #ccc;
 }
