--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -8,7 +8,6 @@
 .room__img-wrap {
     flex: 1 0 calc(25% - 20px);
     transition: transform 1s;
-    /* transform: translateX(calc(-200% - 40px) ); */
 }
 
 .room__img {
@@ -84,7 +83,6 @@
     margin-top: 20px;
     font-weight: 700;
     font-size: 2.2rem;
-    color: #181460;
 }
 
 .info__desc-wrap {
@@ -94,7 +92,6 @@
 .info__desc {
     font-size: 1.7rem;
     margin-top: 10px;
-    color: #181460;
     list-style-type: square;
     list-style-position: inside;
 }
@@ -112,7 +109,7 @@
 .room-desc {
     font-weight: 700;
     font-size: 2rem;
-    color: #181460;
+    color: var(--primary);
 }
 
 .room-list {
@@ -125,7 +122,7 @@
     justify-content: space-between;
     /* background: #e0def5; */
     padding: 15px 20px;
-    background: #a5def2;
+    background: var(--secondary);
 }
 
 .room-list-container + .room-list-container {
@@ -135,7 +132,7 @@
 .room-list__name {
     margin-bottom: 10px;
     /* color: #241caf; */
-    color: #00468B;
+    color: var(--primary);
 }
 
 .room-list__name strong {
@@ -154,8 +151,8 @@
     top: 50%;
     width: 5px;
     height: 5px;
-    border-top: 2px solid #181460;
-    border-right: 2px solid #181460;
+    border-top: 2px solid var(--primary);
+    border-right: 2px solid var(--primary);
     transition: 0.5s;
     transform: translateY(-50%) rotate(135deg);
 }
