--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -120,28 +120,37 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* background: #e0def5; */
     padding: 15px 20px;
     background: var(--secondary);
+    line-height: 1.5;
+}
+
+.room-list-container {
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .room-list-container + .room-list-container {
     margin-top: 15px;
 }
 
-.room-list__name {
+.room-list__code-room {
     margin-bottom: 10px;
-    /* color: #241caf; */
     color: var(--primary);
 }
 
-.room-list__name strong {
+.room-list__code-room strong {
     font-weight: 600;
 }
 
+/* Open Button */
 .room-list__open {
     position: relative;
     padding-right: 15px;
+}
+
+.room-list__open.rotate-45deg::after {
+    transform: translateY(calc(-50% - 0px)) rotate(-45deg);
 }
 
 .room-list__open::after {
@@ -157,21 +166,71 @@
     transform: translateY(-50%) rotate(135deg);
 }
 
+/* Room-list__bottom */
 .room-list__bottom {
     display: none;
     background: #fff;
 }
 
-.room-list__open.rotate-45deg::after {
-    transform: translateY(calc(-50% - 0px)) rotate(-45deg);
+.show-detail {
+    display: block;
 }
 
-.show-detail {
+.room-list__overview {
+    display: flex;
+    column-gap: 10px;
+}
+
+.room-list__overview > * {
+    flex: 1;
+}
+
+.room-list__img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.room-list__overview-wrap {
+    margin-top: 5px;
+}
+
+.room-list__overview-wrap,
+.room-list__detail-wrap {
+    padding: 10px;
+}
+
+.room-list__bottom strong {
+    color: #d69b2c;
+    font-weight: 600;
+    padding: 10px 0;
+}
+
+.room-list__heading {
+    display: inline-block;
+    font-size: 1.6rem;
+    font-weight: 600;
+    position: relative;
+}
+
+.room-list__heading::after {
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: 50px;
+    bottom: -8px;
+    left: 0;
+    background: var(--primary);
+}
+
+.room-list__overview-info {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    margin-top: 10px;
+    font-size: 1.4rem;
 }
 
-.room-list__bottom-item {
+.room-list__overview-item {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -181,10 +240,27 @@
     border: 1px solid #f7f7f7;
 }
 
-.room-list__bottom strong {
-    color: #d69b2c;
-    font-weight: 600;
-    padding: 10px 0;
+.room-list__detail {
+    font-size: clamp(0.8rem, 3vw, 1.4rem);
+    line-height: 1.5;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.room-list__detail-top {
+    border-bottom: 1px solid #ccc;
+}
+
+.room-list__detail-icon-v {
+    color: #1e88e5;
+}
+
+.room-list__detail-icon-x {
+    color: #ff0000;
 }
 
 /* Right */
