--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -532,6 +532,19 @@ button {
     margin-top: 15px;
 }
 
+.footer__map {
+    width: 100%;
+    padding-top: 75%;
+    position: relative;
+}
+
+.footer__iframe {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .footer__copyright {
     margin-top: 40px;
     text-align: center;
