--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,12 +119,10 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
 }
 
 .navbar {
     display: flex;
-    column-gap: 32px;
 }
 
 .header__link {
@@ -132,12 +130,22 @@ button {
     color: #fff;
     font-weight: 600;
     white-space: nowrap;
+    transition: background-color 0.25s;
+}
+
+.header__link {
+    display: inline-block;
+    padding: 20px;
 }
 
 .header__link-logo {
     color: #febb02;
     font-size: 20px;
     font-weight: 800;
+}
+
+.header__link:hover {
+    background: #fcb900;
 }
 
 /* Main */
@@ -529,6 +537,8 @@ button {
 }
 
 .footer__info {
+    display: flex;
+    align-items: center;
     margin-top: 15px;
 }
 
